# Synapse

./: .gitignore  README.md
cli/: CMakeLists.txt  vcpkg.json
cli/src/: client.cpp  client.h  graph.cpp  graph.h  main.cpp  parser.cpp  parser.h  patcher.cpp  patcher.h
